# 1.04.01 (66517) Aug 2, 2012
> Fix for #3373, crashes on startup for some languages
# 1.04.00 (58699) Nov 17, 2011
# 1.03.04 (58644) Nov 16, 2011
11/16/11 > Java 7 compatibility fix (#3138, treeLock exception)
Reduced image sizes to reduce jar size, see #3066
Removed unused images, see #3066
# 1.03.03 (56411) Sep 12, 2011
# 1.03.02 (53318) Jun 20, 2011
Fixed: Height is quantized to be 1 or 2 meters in countries that use comma for decimal place, resolves #2644
# 1.03.01 (49348) Mar 1, 2011
Removed unused references to RulerNode, see #2678
1/28/10 clean up ScaleNode to investigate #2141
# 1.03.00 (37990) Jan 9, 2010
1/9/10 public version for milestone "full redeploy, 2010 Q1"
# 1.02.01 (37345) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 1.02.00 (36233) Oct 29, 2009
# 1.01.01 (36212) Oct 29, 2009
> Changed "male gender" to "sex" in the disclaimer text.
# 1.01.00 (30589) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30588
# 1.00.02 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.00.01 (28785) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
New in 0.00.85
>When dragging an item to the bar chart, it will move to a random position on the plate (or exercise log)
>Converted control panel background to green
>Made control panel fonts bold
>The play/pause/step buttons are be disabled when you reach the 2 year mark, re-enabled on chart area clear or sim reset
>Horizontal zoom allows you to zoom in from 2 years, and out to a maximum of 2 years.
>Changed bar chart zoom buttons to look like graph zoom buttons
>Fixed: Reset all does not reset the calorie axis for the bar charts.
>Fixed: When calories drop back down, the zoom buttons go away but the axis does not rescale, so you can end up with a rescaled axis that you can not get back to the standard view (unless you add lots of calories to make the zoom buttons return).